crates/test-generator/tests/snapshots/ts/test_generated_while_statement.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
while (condition2) { break; }

AST:
(program
  (while_statement
    condition: (parenthesized_expression
      (identifier "condition2")
    )
    body: (statement_block
      (break_statement)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:8 to 1:18 }, name: "condition2", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
